--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
       <div class="card">
         <div class="image image1"></div>
         <div class="info">
-          <img src="C:\Users\User\Desktop\SNAKE web.impt\pic\Picsart_24-03-05_21-55-55-929.jpg" alt="">
+          <img src="Picsart_24-03-11_09-53-39-034.jpg" alt="">
            <br> Date: 28/02/2024
           </p>
         </div>
@@ -25,7 +25,7 @@
       <div class="card">
         <div class="image image1"></div>
         <div class="info">
-          <img src="C:\Users\User\Desktop\SNAKE web.impt\pic\Picsart_24-03-05_21-52-55-371.jpg" alt="">
+          <img src="Picsart_24-03-11_09-58-20-730.jpg" alt="">
            <br> Date: 28/02/2024
           </p>
         </div>
@@ -34,7 +34,7 @@
       <div class="card">
         <div class="image image1"></div>
         <div class="info">
-          <img src="C:\Users\User\Desktop\SNAKE web.impt\pic\Picsart_24-03-07_22-40-05-813.jpg" alt="">
+          <img src="Picsart_24-03-11_10-00-13-689.jpg" alt="">
            <br> Date: 11/12/2023
           </p>
         </div>
@@ -43,7 +43,7 @@
       <div class="card">
         <div class="image image1"></div>
         <div class="info">
-          <img src="C:\Users\User\Desktop\SNAKE web.impt\pic\Picsart_24-03-07_22-46-46-080.jpg" alt="">
+          <img src="Picsart_24-03-11_10-02-53-376.jpg" alt="">
           <p>
            Cultural Day. </span>
            <br> Date: 19/08/2023
