--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <a href="gallery.html">👉Click Here to see some moments.</a>
         </div>
         <div class="msg">
-          <a href="heart.html">👉Check My HeartBeat.</a>
+          <a href="https://7snake07.github.io/gift/#untoldcoding">👉Your Gift.</a>
         </div>
       </div>
     </section>
