--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
          
        
           <br />
-          ㅤㅤㅤㅤㅤㅤ         ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ  From, SNAKE
+          ㅤㅤㅤㅤㅤㅤ         ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ  From, SNAKE
         <br />
-                  ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ (Yeah..u may know me as-Sawmsuala)
+                  ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ (Yeah..u may know me as-Sawmsuala)
           <br />
  
         </p>
@@ -60,6 +60,7 @@
         <div class="img">
           <a href="gallery.html">👉Click Here to see some moments.</a>
         </div>
+       <br />
         <div class="msg">
           <a href="https://7snake07.github.io/gift/#untoldcoding">👉Your Gift.</a>
         </div>
