--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <div class="text">
         <h1>
           Wishing You a very Happy Birthday
-          <span id="textt"> 💖</span>
+          <span id="textt">🥳 </span>
         </h1>
         <br />
         <p>
-          TO, OUR LITTLE PRINCESS <br />
+          TO, OUR LITTLE PRINCESS👸 <br />
           <br />
           I WISH THAT YOUR BIRTHDAY BRINGS ANOTHER YEAR OF SUCCESS AND THE BEST TIME TO YOUR LIFE.
           <br />
@@ -41,17 +41,17 @@
          <br /> 
           AND NOT ONLY YOU MADE MY LIFE BEAUTIFUL BUT THE LIVES OF COUNTLESS OTHERS !
           <br />
-          I'M SO LUCKY TO HAVE YOU AS MY FRIEND🤞...HOPE YOUR BIRTHDAY IS AS SPECIAL AS YOU ARE💖. 
+          I'M SO LUCKY TO HAVE YOU AS MY FRIEND🤞...HOPE YOUR BIRTHDAY IS AS SPECIAL AS YOU ARE🤭. 
           <br />
           MAY GOD GRANT ALL YOUR WISHES AND ALL OF YOUR DREAMS COME TRUE.
           <br />
-          THANKS FOR BEING SUCH A GREAT FRIEND.<br />
+          THANKS FOR BEING SUCH A GREAT FRIEND💖.<br />
          
        
           <br />
           ㅤㅤㅤㅤㅤㅤ         ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ  From, SNAKE
         <br />
-                  ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ (Yeah..u may know me as-Sawmsuala)
+                  ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ (Yeah..u may know me as-Sawmsuala😑)
           <br />
  
         </p>
@@ -60,7 +60,6 @@
         <div class="img">
           <a href="gallery.html">👉Click Here to see some moments.</a>
         </div>
-       <br />
         <div class="msg">
           <a href="https://7snake07.github.io/gift/#untoldcoding">👉Your Gift.</a>
         </div>
